added qrcode generator
